backend/deployment/k8s-experimento.yaml
###################################
# API GATEWAY
###################################
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api-gateway
  labels:
    app: api-gateway
spec:
  replicas: 1
  selector:
    matchLabels:
      app: api-gateway
  template:
    metadata:
      labels:
        app: api-gateway
    spec:
      containers:
        - name: api-gateway
          image: us-central1-docker.pkg.dev/abcall/abcall/api-gateway:latest
          ports:
            - containerPort: 5000
          imagePullPolicy: Always

---
kind: Service
apiVersion: v1
metadata:
  name: servicio-api-gateway
  annotations:
    cloud.google.com/backend-config: '{"default": "api-gateway-config"}'
spec:
  type: NodePort
  selector:
    app: api-gateway
  ports:
    - protocol: TCP
      port: 80
      targetPort: 5000
      nodePort: 31030

---
###################################
# gestor-agentes
###################################
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gestor-agentes
  labels:
    app: gestor-agentes
spec:
  replicas: 1
  selector:
    matchLabels:
      app: gestor-agentes
  template:
    metadata:
      labels:
        app: gestor-agentes
    spec:
      containers:
        - name: gestor-agentes
          image: us-central1-docker.pkg.dev/abcall/abcall/gestor-agentes:latest
          ports:
            - containerPort: 5000
          imagePullPolicy: Always

---
kind: Service
apiVersion: v1
metadata:
  name: servicio-gestor-agentes
  annotations:
    cloud.google.com/backend-config: '{"default": "gestor-agentes-config"}'
spec:
  type: NodePort
  selector:
    app: gestor-agentes
  ports:
    - protocol: TCP
      port: 80
      targetPort: 5000
      nodePort: 31026
---
###################################
# gestor-incidentes
###################################
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gestor-incidentes
  labels:
    app: gestor-incidentes
spec:
  replicas: 1
  selector:
    matchLabels:
      app: gestor-incidentes
  template:
    metadata:
      labels:
        app: gestor-incidentes
    spec:
      containers:
        - name: gestor-incidentes
          image: us-central1-docker.pkg.dev/abcall/abcall/gestor-incidentes:latest
          ports:
            - containerPort: 5000
          imagePullPolicy: Always

---
kind: Service
apiVersion: v1
metadata:
  name: servicio-gestor-incidentes
  annotations:
    cloud.google.com/backend-config: '{"default": "gestor-incidentes-config"}'
spec:
  type: NodePort
  selector:
    app: gestor-incidentes
  ports:
    - protocol: TCP
      port: 80
      targetPort: 5000
      nodePort: 31023
---
